cargo_error.txt
    Blocking waiting for file lock on build directory
    Checking gpu-allocator v0.28.0
   Compiling WinIsland v1.2.0 (C:\Users\Administrator\WinIsland)
    Checking cpal v0.18.1
    Checking wgpu-hal v29.0.3
    Checking wgpu-core-deps-windows-linux-android v29.0.3
    Checking wgpu-core v29.0.3
    Checking wgpu v29.0.3
error[E0432]: unresolved import `windows::Win32::UI::Notifications`
  --> src\window\app.rs:35:25
   |
35 | use windows::Win32::UI::Notifications::{
   |                         ^^^^^^^^^^^^^ could not find `Notifications` in `UI`
   |
note: found an item that was configured out
  --> C:\Users\Administrator\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.62.2\src\Windows\Win32\UI\mod.rs:20:9
   |
19 | #[cfg(feature = "Win32_UI_Notifications")]
   |       ---------------------------------- the item is gated behind the `Win32_UI_Notifications` feature
20 | pub mod Notifications;
   |         ^^^^^^^^^^^^^

warning: unused import: `ToastNotification`
   --> src\window\app.rs:193:13
    |
193 |             ToastNotification, ToastNotificationManager, ToastTemplateType,
    |             ^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no associated function or constant named `GetTemplateContent` found for struct `ToastNotificationManager` in the current scope
   --> src\window\app.rs:198:45
    |
198 |             match ToastNotificationManager::GetTemplateContent(ToastTemplateType::ToastText02) {
    |                                             ^^^^^^^^^^^^^^^^^^ associated function or constant not found in `ToastNotificationManager`

error[E0599]: no associated function or constant named `CreateToastNotification` found for struct `ToastNotificationManager` in the current scope
    --> src\window\app.rs:213:53
     |
 213 |         let toast = match ToastNotificationManager::CreateToastNotification(&tmpl) {
     |                                                     ^^^^^^^^^^^^^^^^^^^^^^^ associated function or constant not found in `ToastNotificationManager`
     |
help: there is an associated function `CreateToastNotifier` with a similar name
    --> C:\Users\Administrator\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.62.2\src\Windows\UI\Notifications\mod.rs:3191:5
     |
3191 |     pub fn CreateToastNotifier() -> windows_core::Result<ToastNotifier> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0432, E0599.
For more information about an error, try `rustc --explain E0432`.
warning: `WinIsland` (bin "WinIsland") generated 1 warning
error: could not compile `WinIsland` (bin "WinIsland") due to 3 previous errors; 1 warning emitted
